@@ -1,3 +1,8 @@
+2011-01-01  smeghead <smeghead7@gmail.com>
+
+	* help to copy link and title text in ticket page.
+	* prepare release.
+
 2010-12-22  smeghead <smeghead7@gmail.com>
 
 	* help to copy link and title text each tickets in ticket list.
